--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Undangan Pernikahan Rahmat & Ratih</title>
     <meta name="title" content="Undangan Pernikahan Rahmat & Ratih">
     <meta name="description" content="Website Undangan Pernikahan Rahmat & Ratih Secara Online">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/icon.png">
+    <link rel="icon" type="image/webp" sizes="192x192" href="assets/images/icon.webp">
     <meta name="theme-color" content="#212529">
     <meta name="color-scheme" content="dark">
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous">
@@ -66,7 +66,7 @@
                 <h1 class="font-estetik my-4" style="font-size: 2.2rem;">Undangan Pernikahan</h1>
                 <div class="py-4">
                     <div class="cropper border border-3 border-light shadow mx-auto">
-                        <img src="assets/images/bg.jpg" alt="bg">
+                        <img src="assets/images/bg.webp" alt="bg">
                     </div>
                 </div>
                 <h1 class="font-estetik my-4" style="font-size: 3rem;">Rahmat & Ratih</h1>
@@ -94,7 +94,7 @@
                 <div class="overflow-x-hidden">
                     <div data-aos="fade-right" data-aos-duration="2000">
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cowo.jpg" alt="bg">
+                            <img src="assets/images/cowo.webp" alt="bg">
                         </div>
                         <h1 class="font-estetik" style="font-size: 3rem;">Rahmat Sumantri, S.Kom</h1>
                         <h5 class="mt-3 mb-0">Putra Bungsu</h5>
@@ -105,7 +105,7 @@
 
                     <div data-aos="fade-left" data-aos-duration="2000">
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cewe.jpg" alt="bg">
+                            <img src="assets/images/cewe.webp" alt="bg">
                         </div>
                         <h1 class="font-estetik" style="font-size: 3rem;">Ratih Swastika Permata, S.Des, M.Pd</h1>
                         <h5 class="mt-3 mb-0">Putri Sulung</h5>
@@ -202,13 +202,13 @@
 
                         <div class="carousel-inner rounded-4">
                             <div class="carousel-item active">
-                                <img src="assets/images/galeri/1.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/1.webp" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/2.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/2.webp" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/galeri/3.jpg" class="d-block w-100">
+                                <img src="assets/images/galeri/3.webp" class="d-block w-100">
                             </div>
                         </div>
 
@@ -243,9 +243,9 @@
                     <div class="overflow-x-hidden">
                         <div class="row justify-content-center">
                             <div class="col-12 card-body border rounded-4 shadow p-3 m-3" style="max-width: 25rem;" data-aos="fade-down" data-aos-duration="1500">
-                                <img src="assets/images/qr.png" class="img-fluid rounded" width="300" alt="qr">
+                                <img src="assets/images/qr.webp" class="img-fluid rounded" width="300" alt="qr">
                                 <p class="card-text bg-white mt-4 rounded-4">
-                                    <img src="assets/images/qr2.png" class="img-fluid rounded" width="400" alt="bni">
+                                    <img src="assets/images/qr2.webp" class="img-fluid rounded" width="400" alt="bni">
                                 </p>
                             </div>
                         </div>
@@ -291,9 +291,9 @@
                     </div>
                 </div>
 
-                <!-- <div class="rounded-4 mt-4 mb-2">
+                <div class="rounded-4 mt-4 mb-2">
                     <div id="daftarucapan"></div>
-                </div> -->
+                </div>
 
                 <nav class="d-flex justify-content-center">
                     <ul class="pagination mb-0">
@@ -351,7 +351,7 @@
                     <div class="text-center">
                         <h1 class="font-estetik mb-4" style="font-size: 2.2rem;">The Wedding Of</h1>
                         <div class="cropper border border-3 border-light shadow mb-4 mx-auto">
-                            <img src="assets/images/bg.jpg" alt="bg">
+                            <img src="assets/images/bg.webp" alt="bg">
                         </div>
                         <h1 class="font-estetik my-4" style="font-size: 2.5rem;">Rahmat & Ratih</h1>
                         <div id="namatamu"></div>
