--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <h1 class="font-estetik" style="font-size: 3rem;">Ratih Swastika Permata, S.Des, M.Pd</h1>
                         <h5 class="mt-3 mb-0">Putri Sulung</h5>
-                        <p class="mb-0">Bapak Karnad & Ibu Bariah Kurniawati</p>
+                        <p class="mb-0">Bapak Karnadi & Ibu Bariah Kurniawati</p>
                     </div>
                 </div>
             </div>
