--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         </div>
                         <h1 class="font-estetik" style="font-size: 3rem;">Rahmat Sumantri, S.Kom</h1>
                         <h5 class="mt-3 mb-0">Putra Bungsu</h5>
-                        <p class="mb-0">Bapak Suganda & Ibu Siti Robiah</p>
+                        <p class="mb-0">Bapak Suganda (Alm.) & Ibu Siti Robiah</p>
                     </div>
 
                     <h1 class="font-estetik my-4" style="font-size: 4rem;">&</h1>
