--- a/indexold.html
+++ b/indexold.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Weeding Of Rahmat & Ratih</title>
-    <meta name="title" content="The Weeding Of Rahmat & Ratih">
-    <meta name="description" content="The Weeding Of Rahmat & Ratih">
+    <title>Undangan Pernikahan Rahmat & Ratih</title>
+    <meta name="title" content="Undangan Pernikahan Rahmat & Ratih">
+    <meta name="description" content="Website Undangan Pernikahan Rahmat & Ratih Secara Online">
     <link rel="icon" type="image/webp" sizes="192x192" href="assets/images/icon.webp">
     <meta name="theme-color" content="#212529">
     <meta name="color-scheme" content="dark">
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body data-email="rahmat@mail.com" data-password="12345678" data-url="https://api.rahmatsumantri.my.id">
@@ -347,12 +346,15 @@
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-fullscreen m-0">
-            <div class="modal-content modal-cover m-0 p-0">
+            <div class="modal-content m-0 p-0">
                 <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
                     <div class="text-center">
-                        <div id="namatamu"></div>
-                        <div class="cropper mb-4 mx-auto">
+                        <h1 class="font-estetik mb-4" style="font-size: 2.2rem;">The Wedding Of</h1>
+                        <div class="cropper border border-3 border-light shadow mb-4 mx-auto">
+                            <img src="assets/images/bg.webp" alt="bg">
                         </div>
+                        <h1 class="font-estetik my-4" style="font-size: 2.5rem;">Rahmat & Ratih</h1>
+                        <div id="namatamu"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                         </button>
