--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://api.rahmatsumantri.my.id/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" integrity="sha256-HtsXJanqjKTc8vVQjO4YMhiqFoXkfBsjBWcX91T1jr8=" crossorigin="anonymous">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" integrity="sha256-HtsXJanqjKTc8vVQjO4YMhiqFoXkfBsjBWcX91T1jr8=" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -57,57 +57,9 @@
     <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <section class="container" id="home">
-            <div class="text-center py-4">
-                <h1 class="font-estetik my-4" style="font-size: 2.2rem;">Undangan Pernikahan</h1>
-                <div class="py-4">
-                    <div class="cropper border border-3 border-light shadow mx-auto">
-                        <img src="assets/images/bg.webp" alt="bg">
-                    </div>
-                </div>
-                <h1 class="font-estetik my-4" style="font-size: 3rem;">Rahmat & Ratih</h1>
-                <h4>Sabtu, 01 July 2023</h4>
-                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-1" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Rahmat%20and%20Ratih&details=The%20Wedding%20of%20Rahmat%20and%20Ratih%20%7C%2001%20July%202023%20%7C%20SDN%20LOJI%202%20KOTA%20BOGOR&dates=20230701T100000/20230315T110000&location=https://goo.gl/maps/52Y4V2k4xt5g5USMA">
-                    <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-                </a>
-            </div>
         </section>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#111111" fill-opacity="1" d="M0,160L48,144C96,128,192,96,288,106.7C384,117,480,171,576,165.3C672,160,768,96,864,96C960,96,1056,160,1152,154.7C1248,149,1344,75,1392,37.3L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-            </path>
-        </svg>
-
-        <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="mempelai">
-            <div class="text-center">
-                <h1 class="font-estetik py-4 px-2">Assalamualaikum Warahmatullahi Wabarakatuh</h1>
-
-                <p class="pb-3 px-3">
-                    Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta kerabat
-                    sekalian untuk menghadiri acara pernikahan kami:
-                </p>
-
-                <div class="overflow-x-hidden">
-                    <div data-aos="fade-right" data-aos-duration="2000">
-                        <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cowo.webp" alt="bg">
-                        </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Rahmat Sumantri, S.Kom</h1>
-                        <h5 class="mt-3 mb-0">Putra Bungsu</h5>
-                        <p class="mb-0">Bapak Suganda (Alm.) & Ibu Siti Robiah</p>
-                    </div>
-
-                    <h1 class="font-estetik my-4" style="font-size: 4rem;">&</h1>
-
-                    <div data-aos="fade-left" data-aos-duration="2000">
-                        <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cewe.webp" alt="bg">
-                        </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Ratih Swastika Permata, S.Des, M.Pd</h1>
-                        <h5 class="mt-3 mb-0">Putri Sulung</h5>
-                        <p class="mb-0">Bapak Karnadi & Ibu Bariah Kurniawati</p>
-                    </div>
-                </div>
-            </div>
+        <section id="mempelai">
         </section>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
