--- a/index.html
+++ b/index.html
@@ -59,22 +59,10 @@
         data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <section class="container" id="home">
-            <div class="cropper shadow mx-auto">
-                <img src="assets/images/home.jpg" alt="bg">
-            </div>
         </section>
 
-        <section id="mempelai">
-            <div class="cropper shadow mx-auto">
-                <img src="assets/images/mempelai.jpg" alt="bg">
-            </div>
+        <section class="container" id="mempelai">
         </section>
-
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#111111" fill-opacity="1"
-                d="M0,192L40,181.3C80,171,160,149,240,149.3C320,149,400,171,480,165.3C560,160,640,128,720,128C800,128,880,160,960,186.7C1040,213,1120,235,1200,218.7C1280,203,1360,149,1400,122.7L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
-            </path>
-        </svg>
 
         <div class="container">
             <div class="text-center">
@@ -325,11 +313,11 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-fullscreen m-0">
             <div class="modal-content modal-cover m-0 p-0">
+
                 <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
                     <div class="text-center">
                         <div id="namatamu"></div>
-                        <div class="cropper mb-4 mx-auto">
-                        </div>
+                        <div class="cropper mx-auto"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
