--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2"
         data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
-        <section class="container" id="home">
+        <section class="img-bg" id="home">
         </section>
 
-        <section class="container" id="mempelai">
+        <section class="img-bg" id="mempelai">
         </section>
 
         <div class="container">
