--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://api.rahmatsumantri.my.id/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css"
-        integrity="sha256-HtsXJanqjKTc8vVQjO4YMhiqFoXkfBsjBWcX91T1jr8=" crossorigin="anonymous">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="css/aos.min.css">
     <link rel="stylesheet" href="css/app.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -59,6 +59,36 @@
         data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <section class="img-bg" id="home">
+            <div class="text-end pt-4 pe-4">
+                <p style="
+                    font-size: 0.6rem;
+                    color: #585252;" data-aos="fade-left" data-aos-duration="500">
+                    Dengan hati yang berbahagia, kami mengundang anda<br>
+                     untuk menghadiri perayaan cinta
+                </p>
+            </div>
+            <div class="text-end pe-4">
+                <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
+                    Rahmat </div>
+                <div style="
+                font-size: 2em; 
+                color: #585252; 
+                line-height:1.2em; 
+                letter-spacing: .1em;
+                font-weight: bold;
+                font-family: SweetRomance;" data-aos="fade-left" data-aos-duration="1500">
+                    & </div>
+                <div class="text-home" data-aos="fade-left" data-aos-duration="2000">
+                    Ratih </div>
+                <div style="
+                font-size: 1em; 
+                color: #585252; 
+                margin-top: .7em;
+                letter-spacing: .3em;
+                font-weight: bold;" data-aos="fade-left" data-aos-duration="2500">
+                    01.07.23 </div>
+
+            </div>
         </section>
 
         <section class="img-bg" id="mempelai">
@@ -328,11 +358,9 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha256-6o/gIaSs5PZ4b+zEGPcLZY/C3ALRNuj+XGq2tipG1dA=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"
-        integrity="sha256-pQBbLkFHcP1cy0C8IhoSdxlm0CtcH5yJ2ki9jjgR03c=" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/aos.min.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
 
 </html>
