--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     font-size: 0.6rem;
                     color: #585252;" data-aos="fade-left" data-aos-duration="500">
                     Dengan hati yang berbahagia, kami mengundang anda<br>
-                     untuk menghadiri perayaan cinta
+                    untuk menghadiri perayaan cinta
                 </p>
             </div>
             <div class="text-end pe-4">
@@ -92,27 +92,58 @@
         </section>
 
         <section class="img-bg" id="mempelai">
+            <p style="
+                    font-size: 0.7rem;
+                    color: black;
+                    text-align: center;
+                    margin-bottom: 5em;" data-aos="fade-down" data-aos-duration="1000">
+                Tanpa mengurangi rasa hormat. Kami mengundang <br>
+                Bapak/Ibu/Saudara/i serta kerabat sekalian untuk <br>
+                menghadiri acara pernikahan kami;
+            </p>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300">
+                <img src="assets/images/ratih.png" class="img-mempelai">
+            </p>
+            <p class="text-center">
+                <span style="
+                    font-size: 1.5rem;
+                    color: black;
+                    font-family: SweetRomance;" data-aos="fade-down" data-aos-duration="1000">
+                    Ratih Swastika Permata, S.Des, M.Pd</span> <br>
+                <span style="
+                font-size: .7rem;
+                color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
+            </p>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300">
+                <img src="assets/images/Rahmat.png" class="img-mempelai">
+            </p>
+            <p class="text-center">
+                <span style="
+                    font-size: 1.5rem;
+                    color: black;
+                    font-family: SweetRomance;" data-aos="fade-down" data-aos-duration="1000">
+                    Rahmat Sumantri, S.Kom</span> <br>
+                <span style="
+                font-size: .7rem;
+                color: black;">Putra Bungsu dari Bapak Suganda (Alm) dan Ibu Siti Robiah</span>
+            </p>
         </section>
 
-        <div class="container">
-            <div class="text-center">
-                <p style="font-size: 0.9rem;" class="px-2" data-aos="fade-up" data-aos-duration="1500">
-                    Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari
-                    jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu
-                    rasa kasih dan sayang. Sungguh, pada yang demikian itu benar-benar terdapat tanda-tanda
-                    (kebesaran Allah) bagi kaum yang berpikir.
-                </p>
-                <span class="mb-0" data-aos="fade-up"><strong>QS. Ar-Rum Ayat 21</strong></span>
+
+        <section id="tanggal">
+
+            <div class="container">
+                <div class="text-center">
+                    <p style="font-size: 0.9rem;" class="px-2" data-aos="fade-up" data-aos-duration="1500">
+                        Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari
+                        jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di
+                        antaramu
+                        rasa kasih dan sayang. Sungguh, pada yang demikian itu benar-benar terdapat tanda-tanda
+                        (kebesaran Allah) bagi kaum yang berpikir.
+                    </p>
+                    <span class="mb-0" data-aos="fade-up"><strong>QS. Ar-Rum Ayat 21</strong></span>
+                </div>
             </div>
-        </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#111111" fill-opacity="1"
-                d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
-            </path>
-        </svg>
-
-        <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="tanggal">
             <div class="container">
                 <div class="text-center">
                     <h1 class="font-estetik py-3" style="font-size: 2rem;">Waktu Menuju Acara</h1>
@@ -213,12 +244,6 @@
                 </div>
             </div>
         </section>
-
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#111111" fill-opacity="1"
-                d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z">
-            </path>
-        </svg>
 
         <div class="container">
             <div class="py-4">
