--- a/index.html
+++ b/index.html
@@ -129,21 +129,9 @@
             </p>
         </section>
 
+        <div class="container arrum img-bg"></div>
 
         <section id="tanggal">
-
-            <div class="container">
-                <div class="text-center">
-                    <p style="font-size: 0.9rem;" class="px-2" data-aos="fade-up" data-aos-duration="1500">
-                        Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari
-                        jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di
-                        antaramu
-                        rasa kasih dan sayang. Sungguh, pada yang demikian itu benar-benar terdapat tanda-tanda
-                        (kebesaran Allah) bagi kaum yang berpikir.
-                    </p>
-                    <span class="mb-0" data-aos="fade-up"><strong>QS. Ar-Rum Ayat 21</strong></span>
-                </div>
-            </div>
             <div class="container">
                 <div class="text-center">
                     <h1 class="font-estetik py-3" style="font-size: 2rem;">Waktu Menuju Acara</h1>
