--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="img-bg" id="mempelai">
+        <section class="img-bg text-center" id="mempelai">
             <p style="
                     font-size: 0.7rem;
                     color: black;
@@ -101,10 +101,8 @@
                 Bapak/Ibu/Saudara/i serta kerabat sekalian untuk <br>
                 menghadiri acara pernikahan kami;
             </p>
-            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300">
-                <img src="assets/images/ratih.png" class="img-mempelai">
-            </p>
-            <p class="text-center">
+            <p data-aos="fade-right" data-aos-duration="1000">
+                <img src="assets/images/ratih.png" class="img-mempelai"> <br>
                 <span style="
                     font-size: 1.5rem;
                     color: black;
@@ -114,10 +112,8 @@
                 font-size: .7rem;
                 color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
             </p>
-            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300">
-                <img src="assets/images/Rahmat.png" class="img-mempelai">
-            </p>
-            <p class="text-center">
+            <p data-aos="fade-left" data-aos-duration="2000">
+                <img src="assets/images/Rahmat.png" class="img-mempelai"> <br>
                 <span style="
                     font-size: 1.5rem;
                     color: black;
@@ -131,61 +127,27 @@
 
         <div class="container arrum img-bg"></div>
 
-        <section id="tanggal">
-            <div class="container">
-                <div class="text-center">
-                    <h1 class="font-estetik py-3" style="font-size: 2rem;">Waktu Menuju Acara</h1>
-                    <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
+        <section class="img-bg" id="tanggal">
+             <div class="text-center px-4 mx-2 mb-4" style="padding-top: 5em;">
+                    <h1 style="font-size: 1.5rem; margin-bottom: 0;">Waktu Menuju Acara</h1>
+                    <div>
                         <div class="row justify-content-center" data-waktu="2023-07-01 00:00:00" id="tampilan-waktu">
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="hari">0</h2><small
-                                    class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
+                                <h2 class="d-inline m-0 p-0" id="hari">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="jam">0</h2><small
-                                    class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
+                                <h2 class="d-inline m-0 p-0" id="jam">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="menit">0</h2><small
-                                    class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
+                                <h2 class="d-inline m-0 p-0" id="menit">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
                             </div>
                             <div class="col-3 p-1">
-                                <h2 class="d-inline m-0 p-0" id="detik">0</h2><small
-                                    class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
+                                <h2 class="d-inline m-0 p-0" id="detik">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
                             </div>
                         </div>
                     </div>
 
-                    <p style="font-size: 0.9rem;" class="mt-4 py-2">
-                        Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, insyaAllah kami akan menyelenggarakan
-                        acara :
-                    </p>
-
-                    <div class="overflow-x-hidden">
-                        <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
-                            <h1 class="font-estetik" style="font-size: 2rem;">Akad</h1>
-                            <p>Pukul 09.00 WIB - Selesai</p>
-                        </div>
-
-                        <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                            <h1 class="font-estetik" style="font-size: 2rem;">Resepsi</h1>
-                            <p>Pukul 11.00 WIB - Selesai</p>
-                        </div>
-                    </div>
-
-                    <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/52Y4V2k4xt5g5USMA" target="_blank"
-                            class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
-                            <i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps
-                        </a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                            <strong> SDN LOJI 2 KOTA BOGOR </strong> <br>
-                            Belakang komplek IPB, Jl. Meranti No.137, RT.04/RW.08, Loji, Kec. Bogor Barat, Jawa Barat
-                            16117
-                        </p>
-                    </div>
                 </div>
-            </div>
         </section>
 
         <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="galeri">
