--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
             </p>
             <p data-aos="fade-left" data-aos-duration="2000">
-                <img src="assets/images/Rahmat.png" class="img-mempelai"> <br>
+                <img src="assets/images/rahmat.png" class="img-mempelai"> <br>
                 <span style="
                     font-size: 1.5rem;
                     color: black;
