--- a/index.html
+++ b/index.html
@@ -55,19 +55,36 @@
 
     <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
-        <section class="container" id="home">
-            <div class="text-center py-4">
-                <h1 class="font-estetik my-4" style="font-size: 2.2rem;">Undangan Pernikahan</h1>
-                <div class="py-4">
-                    <div class="cropper border border-3 border-light shadow mx-auto">
-                        <img src="assets/images/bg.webp" alt="bg">
-                    </div>
-                </div>
-                <h1 class="font-estetik my-4" style="font-size: 3rem;">Rahmat & Ratih</h1>
-                <h4>Sabtu, 01 July 2023</h4>
-                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-1" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Rahmat%20and%20Ratih&details=The%20Wedding%20of%20Rahmat%20and%20Ratih%20%7C%2001%20July%202023%20%7C%20SDN%20LOJI%202%20KOTA%20BOGOR&dates=20230701T100000/20230315T110000&location=https://goo.gl/maps/52Y4V2k4xt5g5USMA">
-                    <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-                </a>
+        <section class="container img-bg" id="home">
+            <div class="text-end pt-4 pe-4">
+                <p style="
+                    font-size: 0.6rem;
+                    color: #585252;" data-aos="fade-left" data-aos-duration="500">
+                    Dengan hati yang berbahagia, kami mengundang anda<br>
+                    untuk menghadiri perayaan cinta
+                </p>
+            </div>
+            <div class="text-end pe-4">
+                <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
+                    Rahmat </div>
+                <div style="
+                font-size: 2em; 
+                color: #585252; 
+                line-height:1.2em; 
+                letter-spacing: .1em;
+                font-weight: bold;
+                font-family: SweetRomance;" data-aos="fade-left" data-aos-duration="1500">
+                    & </div>
+                <div class="text-home" data-aos="fade-left" data-aos-duration="2000">
+                    Ratih </div>
+                <div style="
+                font-size: 1em; 
+                color: #585252; 
+                margin-top: .7em;
+                letter-spacing: .3em;
+                font-weight: bold;" data-aos="fade-left" data-aos-duration="2500">
+                    01.07.23 </div>
+
             </div>
         </section>
 
@@ -319,8 +336,7 @@
                 <div class="d-flex justify-content-center align-items-center" style="height: 100vh !important;">
                     <div class="text-center">
                         <div id="namatamu"></div>
-                        <div class="cropper mb-4 mx-auto">
-                        </div>
+                        <div class="cropper mb-4 mx-auto"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                         </button>
