--- a/index.html
+++ b/index.html
@@ -56,24 +56,18 @@
     <main class="scrollspy-example text-light" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <section class="container img-bg" id="home">
-            <div class="text-end pt-4 pe-4">
+            <div class="text-end pt-4">
                 <p style="
-                    font-size: 0.6rem;
+                    font-size: .7rem;
                     color: #585252;" data-aos="fade-left" data-aos-duration="500">
                     Dengan hati yang berbahagia, kami mengundang anda<br>
                     untuk menghadiri perayaan cinta
                 </p>
             </div>
-            <div class="text-end pe-4">
+            <div class="text-end pe-2">
                 <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
                     Rahmat </div>
-                <div style="
-                font-size: 2em; 
-                color: #585252; 
-                line-height:1.2em; 
-                letter-spacing: .1em;
-                font-weight: bold;
-                font-family: SweetRomance;" data-aos="fade-left" data-aos-duration="1500">
+                <div class="text-home" style="color: #585252;" data-aos="fade-left" data-aos-duration="1500">
                     & </div>
                 <div class="text-home" data-aos="fade-left" data-aos-duration="2000">
                     Ratih </div>
@@ -81,7 +75,7 @@
                 font-size: 1em; 
                 color: #585252; 
                 margin-top: .7em;
-                letter-spacing: .3em;
+                letter-spacing: .5em;
                 font-weight: bold;" data-aos="fade-left" data-aos-duration="2500">
                     01.07.23 </div>
 
