--- a/index.html
+++ b/index.html
@@ -82,37 +82,34 @@
             </div>
         </section>
 
-        <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="mempelai">
+        <section class="container img-bg" id="mempelai">
             <div class="text-center">
-                <h1 class="font-estetik py-4 px-2">Assalamualaikum Warahmatullahi Wabarakatuh</h1>
-
-                <p class="pb-3 px-3">
-                    Tanpa mengurangi rasa hormat. Kami mengundang Bapak/Ibu/Saudara/i serta kerabat
-                    sekalian untuk menghadiri acara pernikahan kami:
-                </p>
-
-                <div class="overflow-x-hidden">
-                    <div data-aos="fade-right" data-aos-duration="2000">
-                        <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cowo.webp" alt="bg">
-                        </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Rahmat Sumantri, S.Kom</h1>
-                        <h5 class="mt-3 mb-0">Putra Bungsu</h5>
-                        <p class="mb-0">Bapak Suganda (Alm.) & Ibu Siti Robiah</p>
-                    </div>
-
-                    <h1 class="font-estetik my-4" style="font-size: 4rem;">&</h1>
-
-                    <div data-aos="fade-left" data-aos-duration="2000">
-                        <div class="cropper border border-3 border-light shadow my-4 mx-auto">
-                            <img src="assets/images/cewe.webp" alt="bg">
-                        </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Ratih Swastika Permata, S.Des, M.Pd</h1>
-                        <h5 class="mt-3 mb-0">Putri Sulung</h5>
-                        <p class="mb-0">Bapak Karnadi & Ibu Bariah Kurniawati</p>
-                    </div>
-                </div>
-            </div>
+                <p style="
+                    font-size: .8rem;
+                    color: black;
+                    text-align: center;
+                    margin-bottom: 5em;" data-aos="fade-down" data-aos-duration="1000">
+                Tanpa mengurangi rasa hormat. Kami mengundang <br>
+                Bapak/Ibu/Saudara/i serta kerabat sekalian untuk <br>
+                menghadiri acara pernikahan kami;
+            </p>
+            
+            <p data-aos="fade-right" data-aos-duration="1000">
+                <img src="assets/images/ratih.png" class="img-mempelai"> <br>
+                <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
+                    Ratih Swastika Permata, S.Des, M.Pd</span> <br>
+                <span style="
+                font-size: .7rem;
+                color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
+            </p>
+            <p data-aos="fade-left" data-aos-duration="2000">
+                <img src="assets/images/rahmat.png" class="img-mempelai"> <br>
+                <span class="text-mempelai" data-aos="fade-down" data-aos-duration="1000">
+                    Rahmat Sumantri, S.Kom</span> <br>
+                <span style="
+                font-size: .7rem;
+                color: black;">Putra Bungsu dari Bapak Suganda (Alm) dan Ibu Siti Robiah</span>
+            </p>
         </section>
 
         <div class="container">
