--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     untuk menghadiri perayaan cinta
                 </p>
             </div>
-            <div class="text-end pe-2">
+            <div class="text-end pe-2 pt-4">
                 <div class="text-home" data-aos="fade-left" data-aos-duration="1000">
                     Rahmat </div>
                 <div class="text-home" style="color: #585252;" data-aos="fade-left" data-aos-duration="1500">
@@ -113,8 +113,8 @@
         </section>
 
         <div class="container">
-            <div class="text-center">
-                <p style="font-size: 0.9rem;" class="px-2" data-aos="fade-up" data-aos-duration="1500">
+            <div class="text-center text-arrum py-4">
+                <p data-aos="fade-up" data-aos-duration="1500">
                     Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari
                     jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu
                     rasa kasih dan sayang. Sungguh, pada yang demikian itu benar-benar terdapat tanda-tanda
@@ -124,10 +124,10 @@
             </div>
         </div>
 
-        <section style="background-color: #111111 !important; margin-top: -5px; margin-bottom: -5px;" id="tanggal">
+        <section id="tanggal">
             <div class="container">
                 <div class="text-center">
-                    <h1 class="font-estetik py-3" style="font-size: 2rem;">Waktu Menuju Acara</h1>
+                    <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Waktu Menuju Acara</h1>
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
                         <div class="row justify-content-center" data-waktu="2023-07-01 00:00:00" id="tampilan-waktu">
                             <div class="col-3 p-1">
@@ -152,18 +152,18 @@
 
                     <div class="overflow-x-hidden">
                         <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
-                            <h1 class="font-estetik" style="font-size: 2rem;">Akad</h1>
+                            <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Akad</h1>
                             <p>Pukul 09.00 WIB - Selesai</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                            <h1 class="font-estetik" style="font-size: 2rem;">Resepsi</h1>
+                            <h1 style="font-size: 3rem; font-family:'SweetRomance'; color: #5f3d22;">Resepsi</h1>
                             <p>Pukul 11.00 WIB - Selesai</p>
                         </div>
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/52Y4V2k4xt5g5USMA" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
+                        <a href="https://goo.gl/maps/52Y4V2k4xt5g5USMA" target="_blank" class="btn btn-outline-dark btn-sm rounded-pill shadow-sm mb-2 px-3" style="color: #585252;">
                             <i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps
                         </a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
